--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -1,18 +1,23 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "start": "tsc && nodemon"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ip": "^1.1.8",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/ip": "^1.1.0",
+    "@types/jsonfile": "^6.1.1",
+    "jsonfile": "^6.1.0",
     "typescript": "^4.9.5"
   }
 }
