--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -18,6 +18,7 @@
     "@types/ip": "^1.1.0",
     "@types/jsonfile": "^6.1.1",
     "jsonfile": "^6.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
