--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -7,9 +7,11 @@
     "start": "tsc && nodemon"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^1.1.8",
+    "mongoose": "^6.10.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
@@ -17,7 +19,7 @@
     "@types/express": "^4.17.17",
     "@types/ip": "^1.1.0",
     "@types/jsonfile": "^6.1.1",
-    "jsonfile": "^6.1.0",
+    "dotenv": "^16.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
