--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^1.1.8",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "socket.io": "^4.6.1"
   },
@@ -19,6 +20,7 @@
     "@types/express": "^4.17.17",
     "@types/ip": "^1.1.0",
     "@types/jsonfile": "^6.1.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "dotenv": "^16.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
