--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -22,6 +22,7 @@
     "@types/jsonfile": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.1",
     "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
