--- a/packages/React/package.json
+++ b/packages/React/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.5.0",
     "react-icons": "^4.7.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
