--- a/packages/Node/tsconfig.json
+++ b/packages/Node/tsconfig.json
@@ -37,6 +37,8 @@
       "@middlewares": ["middlewares"],
       "@handlers": ["handlers"],
       "@controllers": ["controllers"],
+      "@database": ["database"],
+      "@server": ["server"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
