--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "tsc && nodemon"
+    "start": "tsc && nodemon",
+    "test": "vitest run"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -22,8 +23,8 @@
     "@types/jsonfile": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.1",
     "dotenv": "^16.0.3",
-    "jest": "^29.5.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.2"
   }
 }
