--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           node-version: 18
       - run: yarn install --immutable --immutable-cache --check-cache
-      - run: yarn cd packages/Node
+      - run: cd packages/Node
       - run: yarn test
