--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,11 +1,11 @@
 name: Node Continuous Integration
 
 on:
-  push:
+  pull_request:
     branches: [master]
 
 jobs:
-  test_pushes:
+  test_pull_request:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
