--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -7,10 +7,13 @@ on:
 jobs:
   test_pull_request:
     runs-on: ubuntu-latest
+    env:
+      PORT: ${{ secrets.PORT }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - uses: falti/dotenv-action@v1.0.4
       - run: yarn install --immutable --immutable-cache --check-cache
       - run: yarn vitest
