--- a/packages/Node/tsconfig.json
+++ b/packages/Node/tsconfig.json
@@ -34,11 +34,11 @@
     "paths": {
       "@utils": ["utils"],
       "@types": ["types"],
-      "@models": ["models"],
       "@handlers": ["handlers"],
-      "@controllers": ["controllers"],
       "@database": ["database"],
       "@server": ["server"],
+      "@middlewares": ["middlewares"],
+      "@routes": ["routes"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
