--- a/packages/Node/package.json
+++ b/packages/Node/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^1.1.8",
@@ -17,6 +18,7 @@
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/ip": "^1.1.0",
