--- a/packages/Node/tsconfig.json
+++ b/packages/Node/tsconfig.json
@@ -39,6 +39,7 @@
       "@server": ["server"],
       "@middlewares": ["middlewares"],
       "@routes": ["routes"],
+      "@classes": ["classes"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
